--- a/Project 5/index.html
+++ b/Project 5/index.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="image-box">
-            <img src="images/evian_origins_logo.png"/>
+            <!-- <img src="images/evian_origins_logo.png"/> -->
             <p>Glass Limited Edition</p>
         </div>
         <div class="border-container">
